readme : execution du jar