@@ -1,7 +1,10 @@
 # Projet-Fin-Ing1-GI-GM
 
-## Configuration
-
+## Importer le porjet dans un IDE
 Télécharger la librairie commons math : [ici](https://archive.apache.org/dist/commons/math/binaries/commons-math3-3.6.1-bin.tar.gz)
 Télécharger la librairie javaFX : [ici](https://gluonhq.com/products/javafx/)
 Importer le projet avec un IDE java et ajouter la librairie ```javafx``` et ```commons-math3``` au modulepath.
+
+## Exécuter le projet via un jar exécutable
+Télécharger la librairie javaFX : [ici](https://gluonhq.com/products/javafx/)
+Exécuter le .jar : ```java --module-path {le chemin vers la librairie}/lib --add-modules javafx.controls,javafx.fxml,javafx.media -jar exec.jar```
